# github_book_handler

./: .gitignore  Cargo.toml  README.md  config.md  index.html
configs/: config.yml
examples/: database.rs
server/: Cargo.toml  config.md
server/configs/: server-config.yml
server/examples/: database.rs  markdown.rs
server/src/: lib.rs  main.rs
server/src/bookhandler/: download.rs  mod.rs
server/src/configs/: mod.rs  read_book_config.rs  read_server_config.rs
server/src/path/: mod.rs
server/src/service/: config_service.rs  file_service.rs  mod.rs  router_service.rs
server/templates/: 404.html
src/: lib.rs  main.rs
src/bookhandler/: mod.rs
src/configs/: mod.rs
templates/: index.html
web-ui/: Cargo.toml  Dioxus.toml
web-ui/src/: main.rs
